--- a/paginas/minha-conta.html
+++ b/paginas/minha-conta.html
@@ -12,7 +12,7 @@
     <!-- MENU -->
     <header>
         <span>
-            <a href="../index.html"><img src="../src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
+            <a href="index.html"><img src="../src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
         </span>
 
         <input type="search" name="pesquisa" id="pesquisa" class="menu-pesquisa" placeholder="Buscar">
@@ -115,14 +115,14 @@
                 <strong style="font-size: 1.3em;">Nome do Usuário</strong>
                 <p>Email</p>
                 <p>Telefone: (xx)xxxxx-xxxx</p>
-                <button class="btn-minhaconta" btn-placeholder="Editar Dados"><a href="#"></a></button>
+                <a href="#"><button class="btn-minhaconta" btn-placeholder="Editar Dados"></button></a>
             </div>
         </div>
         <!-- Realizar Compra -->
         <div class="caixa-compra">
             <ion-icon name="cart-outline"></ion-icon>
             <p>Realize a sua primeira compra!</p>
-            <a href="../index.html"><button class="btn-compra" btn-placeholder="Ir para Loja"></button></a>
+            <a href="index.html"><button class="btn-index" btn-placeholder="Ir para Loja"></button></a>
         </div>
     </article>
 
