--- a/paginas/teste.html
+++ b/paginas/teste.html
@@ -12,7 +12,7 @@
     <!--MENU-->
     <header>
         <span>
-            <a href="../index.html"><img src="../src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
+            <a href="index.html"><img src="../src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
         </span>
 
         <input type="search" name="pesquisa" id="pesquisa" class="menu-pesquisa" placeholder="Buscar">
