--- a/paginas/cadastro.html
+++ b/paginas/cadastro.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="../src/script/css/style.css">
-    <link rel="stylesheet" href="../src/script/css/responsivo.css">
+    <link rel="stylesheet" href="../src/script/style.css">
+    <link rel="stylesheet" href="../src/script/responsivo.css">
     <link rel="shortcut icon" href="../src/favicon/android-chrome-512x512.png" type="image/x-icon">
 </head>
 <body>
@@ -110,7 +110,7 @@
     <div id="caixa" class="cadastro">
         <div class="form-box">
             <h1>&#x1F48E Crie sua conta!</h1>
-            <form action="#" id="form-cad">
+            <form action="" id="form-cad">
                 <!--Nome-->
                 <div class="input-box">
                     <span class="icon">
@@ -166,7 +166,7 @@
                 </div>
 
                 <!--Cadastrar-->
-                <button type="submit" class="btn-form">CADASTRAR</button>
+                <input type="submit" class="btn-form" value="CADASTRAR"></input>
                 <div class="cad-login">
                     <p>Já possui uma conta? <a href="login.html">Entre aqui!</a></p>
                 </div>
@@ -175,9 +175,15 @@
     </div>
 
     <!--JAVASCRIPT-->
-    <script src="../src/script/javascript/javascript.js" type="text/javascript"></script>
+    <script src="../src/script/javascript.js" type="text/javascript"></script>
+    <script src="../src/script/validacao.js" type="text/javascript"></script>
         <!--Ícones-->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+    <!--Notificação de erro-->
+    <div class="image-container">
+        <img id="image" src="../src/img/alertMessage.jpg" alt="Imagem de Alerta">
+    </div>
 </body>
 </html>
