--- a/paginas/login.html
+++ b/paginas/login.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 <!DOCTYPE html>
-    <link rel="stylesheet" href="../src/script/css/style.css">
-    <link rel="stylesheet" href="../src/script/css/responsivo.css">
+    <link rel="stylesheet" href="../src/script/style.css">
+    <link rel="stylesheet" href="../src/script/responsivo.css">
     <link rel="shortcut icon" href="../src/favicon/android-chrome-512x512.png" type="image/x-icon">
 </head>
 <body>
@@ -132,7 +132,7 @@
                     <a href="#">Esqueceu a Senha?</a>
                 </div>
                 <!--Iniciar Sessão-->
-                <button type="submit" class="btn-form">INICIAR SESSÃO</button>
+                <input type="submit" class="btn-form" value="INICIAR SESSÃO"></input>
                 <div class="cad-login">
                     <p>Não tem uma conta? <a href="cadastro.html">Cadastre-se</a></p>
                 </div>
@@ -141,7 +141,7 @@
     </div>
 
     <!--JAVASCRIPT-->
-    <script src="../src/script/javascript/javascript.js" type="text/javascript"></script>
+    <script src="../src/script/javascript.js" type="text/javascript"></script>
         <!--Ícones-->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
