--- a/paginas/teste.html
+++ b/paginas/teste.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="../src/script/css/style.css">
-    <link rel="stylesheet" href="../src/script/css/responsivo.css">
+    <link rel="stylesheet" href="../src/script/style.css">
+    <link rel="stylesheet" href="../src/script/responsivo.css">
     <link rel="shortcut icon" href="../src/favicon/android-chrome-512x512.png" type="image/x-icon">
 </head>
 <body>
@@ -175,8 +175,8 @@
     </div>
 
     <!--JAVASCRIPT-->
-    <script src="../src/script/javascript/javascript.js" type="text/javascript"></script>
-    <script src="../src/script/javascript/validacao.js" type="text/javascript"></script>
+    <script src="../src/script/javascript.js" type="text/javascript"></script>
+    <script src="../src/script/validacao.js" type="text/javascript"></script>
         <!--Ícones-->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
