CAD e Login HTML to PHP

--- a/paginas/faq.html
+++ b/paginas/faq.html
@@ -36,8 +36,8 @@
                 <button class="btnmenu-mobile">
                     <ion-icon name="person-circle-outline" class="iconconta" color="light"></ion-icon>
                     <div class="listamenu">
-                        <a href="login.html" class="link-listamenu">Iniciar Sessão</a>
-                        <a href="cadastro.html" class="link-listamenu">Criar Conta</a>
+                        <a href="login.php" class="link-listamenu">Iniciar Sessão</a>
+                        <a href="cadastro.php" class="link-listamenu">Criar Conta</a>
                         <a href="minha-conta.html" class="link-listamenu">Minha Conta</a>
                     </div>
                 </button>
@@ -68,8 +68,8 @@
                 <button class="btnmenu-pc">
                     <ion-icon name="person-outline" class="iconbtn"></ion-icon><br>Conta
                     <div class="listamenu btnconta">
-                        <a href="login.html" class="link-listamenu">Iniciar Sessão</a>
-                        <a href="cadastro.html" class="link-listamenu">Criar Conta</a>
+                        <a href="login.php" class="link-listamenu">Iniciar Sessão</a>
+                        <a href="cadastro.php" class="link-listamenu">Criar Conta</a>
                         <a href="minha-conta.html" class="link-listamenu">Minha Conta</a>
                     </div>
                 </button>
@@ -121,8 +121,8 @@
         <span>
             <h1>Conta</h1>
             <ul>
-                <li><a href="login.html">Iniciar Sessão</a></li>
-                <li class="ultimo"><a href="cadastro.html">Criar Conta</a></li>
+                <li><a href="login.php">Iniciar Sessão</a></li>
+                <li class="ultimo"><a href="cadastro.php">Criar Conta</a></li>
             </ul>
         </span>
 
