--- a/paginas/teste.html
+++ b/paginas/teste.html
@@ -36,8 +36,8 @@
                 <button class="btnmenu-mobile">
                     <ion-icon name="person-circle-outline" class="iconconta" color="light"></ion-icon>
                     <div class="listamenu">
-                        <a href="login.html" class="link-listamenu">Iniciar Sessão</a>
-                        <a href="cadastro.html" class="link-listamenu">Criar Conta</a>
+                        <a href="login.php" class="link-listamenu">Iniciar Sessão</a>
+                        <a href="cadastro.php" class="link-listamenu">Criar Conta</a>
                         <a href="minha-conta.html" class="link-listamenu">Minha Conta</a>
                     </div>
                 </button>
@@ -68,8 +68,8 @@
                 <button class="btnmenu-pc">
                     <ion-icon name="person-outline" class="iconbtn"></ion-icon><br>Conta
                     <div class="listamenu btnconta">
-                        <a href="login.html" class="link-listamenu">Iniciar Sessão</a>
-                        <a href="cadastro.html" class="link-listamenu">Criar Conta</a>
+                        <a href="login.php" class="link-listamenu">Iniciar Sessão</a>
+                        <a href="cadastro.php" class="link-listamenu">Criar Conta</a>
                         <a href="minha-conta.html" class="link-listamenu">Minha Conta</a>
                     </div>
                 </button>
@@ -168,7 +168,7 @@
                 <!--Cadastrar-->
                 <button type="submit" class="btn-form">CADASTRAR</button>
                 <div class="cad-login">
-                    <p>Já possui uma conta? <a href="login.html">Entre aqui!</a></p>
+                    <p>Já possui uma conta? <a href="login.php">Entre aqui!</a></p>
                 </div>
             </form>
         </div>
