--- a/paginas/index.html
+++ b/paginas/index.html
@@ -99,9 +99,10 @@
         <input type="search" name="pesquisa" id="pesquisa" placeholder="Buscar">
     </span>
     <span class="menu-pc-mobile">
-        <a href="#">Alianças</a>
-        <a href="#">Brincos</a>
+        <a href="#">Pulseiras</a>
+        <a href="#">Anéis</a>
         <a href="#">Colares</a>
+        <a href="#">Brincos</a>
     </span>
 
     <!-- Link âncora para voltar ao topo da página -->
@@ -111,9 +112,9 @@
     <article id="catalogo">
         <!-- Min-width maior para o menor -->
         <picture>
-            <source media="(min-width: 1063px)" srcset="../src/img/ph-catalogo-pc.jpg">
-            <source media="(min-width: 530px)" srcset="../src/img/ph-catalogo-tablet.jpg">
-            <source media="(min-width: 0px)" srcset="../src/img/ph-catalogo-mobile.jpg">
+            <source media="(min-width: 1063px)" srcset="../src/img/catalogo-pc.jpeg">
+            <source media="(min-width: 530px)" srcset="../src/img/catalogo-tablet.jpeg">
+            <source media="(min-width: 0px)" srcset="../src/img/catalogo-mobile.jpeg">
             <img src="../src/img/ph-catalogo-pc.jpg" alt="Imagem de Catálogo">
         </picture>
     </article>
@@ -181,7 +182,7 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est perspiciatis consequatur veritatis temporibus nesciunt eum quasi veniam ipsa recusandae porro voluptas tempore dolorem eveniet quae, odio omnis natus aliquam atque!</p>
             <a href="#"><button class="btn-saibamais" btn-placeholder="Saiba Mais"></button></a>
         </div>
-        <img src="../src/img/ph-produto-destaque-pulseira.jpg" alt="Pulseira em Destaque">
+            <img src="../src/img/ph-produto-destaque-pulseira.jpg" alt="Pulseira em Destaque">
     </article>
 
     <article class="produtos">
