✨Conheça nossos Produtos

--- a/paginas/index.html
+++ b/paginas/index.html
@@ -174,8 +174,30 @@
         </div>
     </article>
 
+    <!-- CONHEÇA NOSSOS PRODUTOS -->
+     <article class="conheca-produtos">
+        <h1>Conheça nossos Produtos</h1>
+        <div class="conhecaproduto">
+            <a href="#pulseira"><img src="../src/img/ph-produto-pulseira.jpg" alt="Conheça Pulseiras"></a>
+            <a href="#pulseira">Pulseira</a>
+        </div>
+        <div class="conhecaproduto">
+             <a href="#anel"><img src="../src/img/ph-produto-anel.jpg" alt="Conheça Anéis"></a>
+             <a href="#anel">Anel</a>
+        </div>
+        <div class="conhecaproduto">
+            <a href="#colar"><img src="../src/img/ph-produto-colar.jpg" alt="Conheça Colares"></a>
+            <a href="#colar">Colar</a>
+        </div>
+        <div class="conhecaproduto">
+            <a href="#brinco"><img src="../src/img/ph-produto-brinco.jpg" alt="Conheça Brincos"></a>
+            <a href="#brinco">Brinco</a>
+        </div>     
+     </article>
+
     <!-- PRODUTOS -->
         <!-- Pulseira -->
+    <a name="pulseira"></a><br><br>
     <article class="prod-destaque-direita">
         <div class="pdd-texto">
             <h1>Pulseiras</h1>
@@ -230,6 +252,7 @@
     </article>
 
         <!-- Anel -->
+    <a name="anel"></a><br><br>
     <article class="prod-destaque-esquerda">
         <img src="../src/img/ph-produto-destaque-anel.jpg" alt="Pulseira em Destaque">
         <div class="pdd-texto">
@@ -286,6 +309,7 @@
     </article>
 
         <!-- Colar -->
+    <a name="colar"></a><br><br>
     <article class="prod-destaque-direita">
         <div class="pdd-texto">
             <h1>Colares</h1>
@@ -342,6 +366,7 @@
     </article>
     
         <!-- Brinco -->
+    <a name="brinco"></a><br><br>
     <article class="prod-destaque-esquerda">
         <img src="../src/img/ph-produto-destaque-brinco.jpg" alt="Pulseira em Destaque">
         <div class="pdd-texto">
@@ -445,6 +470,5 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <!-- Font Awesome - usado para o rodapé -->
     <script src="https://kit.fontawesome.com/750ae9b6a4.js" crossorigin="anonymous"></script>
-
 </body>
 </html>
