🔨Conheça produtos Scroll

--- a/paginas/index.html
+++ b/paginas/index.html
@@ -177,27 +177,29 @@
     <!-- CONHEÇA NOSSOS PRODUTOS -->
      <article class="conheca-produtos">
         <h1>Conheça nossos Produtos</h1>
-        <div class="conhecaproduto">
-            <a href="#pulseira"><img src="../src/img/ph-produto-pulseira.jpg" alt="Conheça Pulseiras"></a>
-            <a href="#pulseira">Pulseira</a>
-        </div>
-        <div class="conhecaproduto">
-             <a href="#anel"><img src="../src/img/ph-produto-anel.jpg" alt="Conheça Anéis"></a>
-             <a href="#anel">Anel</a>
-        </div>
-        <div class="conhecaproduto">
-            <a href="#colar"><img src="../src/img/ph-produto-colar.jpg" alt="Conheça Colares"></a>
-            <a href="#colar">Colar</a>
-        </div>
-        <div class="conhecaproduto">
-            <a href="#brinco"><img src="../src/img/ph-produto-brinco.jpg" alt="Conheça Brincos"></a>
-            <a href="#brinco">Brinco</a>
-        </div>     
+        <span class="conheca-conteudo">
+            <div class="conhecaproduto">
+                <a href="#pulseira"><img src="../src/img/ph-produto-pulseira.jpg" alt="Conheça Pulseiras"></a>
+                <a href="#pulseira">Pulseira</a>
+            </div>
+            <div class="conhecaproduto">
+                 <a href="#anel"><img src="../src/img/ph-produto-anel.jpg" alt="Conheça Anéis"></a>
+                 <a href="#anel">Anel</a>
+            </div>
+            <div class="conhecaproduto">
+                <a href="#colar"><img src="../src/img/ph-produto-colar.jpg" alt="Conheça Colares"></a>
+                <a href="#colar">Colar</a>
+            </div>
+            <div class="conhecaproduto">
+                <a href="#brinco"><img src="../src/img/ph-produto-brinco.jpg" alt="Conheça Brincos"></a>
+                <a href="#brinco">Brinco</a>
+            </div>
+        </span>    
      </article>
 
     <!-- PRODUTOS -->
         <!-- Pulseira -->
-    <a name="pulseira"></a><br><br>
+    <a name="pulseira"></a>
     <article class="prod-destaque-direita">
         <div class="pdd-texto">
             <h1>Pulseiras</h1>
@@ -252,7 +254,7 @@
     </article>
 
         <!-- Anel -->
-    <a name="anel"></a><br><br>
+    <a name="anel"></a>
     <article class="prod-destaque-esquerda">
         <img src="../src/img/ph-produto-destaque-anel.jpg" alt="Pulseira em Destaque">
         <div class="pdd-texto">
@@ -309,7 +311,7 @@
     </article>
 
         <!-- Colar -->
-    <a name="colar"></a><br><br>
+    <a name="colar"></a>
     <article class="prod-destaque-direita">
         <div class="pdd-texto">
             <h1>Colares</h1>
@@ -366,7 +368,7 @@
     </article>
     
         <!-- Brinco -->
-    <a name="brinco"></a><br><br>
+    <a name="brinco"></a>
     <article class="prod-destaque-esquerda">
         <img src="../src/img/ph-produto-destaque-brinco.jpg" alt="Pulseira em Destaque">
         <div class="pdd-texto">
