--- a/paginas/login.html
+++ b/paginas/login.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
+    <title>Login</title>
+<!DOCTYPE html>
     <link rel="stylesheet" href="../src/script/style.css">
     <link rel="stylesheet" href="../src/script/responsivo.css">
     <link rel="shortcut icon" href="../src/favicon/android-chrome-512x512.png" type="image/x-icon">
@@ -107,21 +108,11 @@
         <a href="#">Colares</a>
     </span>
 
-    <!--CADASTRO-->
-    <!--Nome, email, cpf, telefone e senha-->
-    <div id="caixa" class="cadastro">
+    <!--LOGIN-->
+    <div id="caixa" class="login">
         <div class="form-box">
-            <h1>&#x1F48E Crie sua conta!</h1>
-            <form action="#" id="form-cad">
-                <!--Nome-->
-                <div class="input-box">
-                    <span class="icon">
-                        <ion-icon name="person-outline"></ion-icon>
-                    </span>
-                    <input type="text" name="nome" id="nome" required>
-                    <label for="nome">Nome</label>
-                </div>
-
+            <h1>&#x1F44B Iniciar Sessão</h1>
+            <form action="#">
                 <!--Email-->
                 <div class="input-box">
                     <span class="icon">
@@ -130,25 +121,6 @@
                     <input type="email" name="email" id="email" required>
                     <label for="email">Email</label>
                 </div>
-
-                <!--CPF-->
-                <div class="input-box">
-                    <span class="icon">
-                        <ion-icon name="terminal-outline"></ion-icon>
-                    </span>
-                    <input type="text" name="cpf" id="cpf" class="cpf" maxlength="14" required>
-                    <label for="cpf">CPF</label>
-                </div>
-
-                <!--Telefone-->
-                <div class="input-box">
-                    <span class="icon">
-                        <ion-icon name="call-outline"></ion-icon>
-                    </span>
-                    <input type="text" name="tel" id="tel" class="tel" maxlength="14" required>
-                    <label for="tel">Telefone</label>
-                </div>
-
                 <!--Senha-->
                 <div class="input-box">
                     <span class="icon-relevarsenha" onclick="Mostrar_Senha()">
@@ -157,20 +129,14 @@
                     <input type="password" name="senha" id="senha" required>
                     <label for="senha">Senha</label>
                 </div>
-
-                <!--Confirmar Senha-->
-                <div class="input-box">
-                    <span class="icon-relevarsenha" onclick="Mostrar_ConfirmarSenha()">
-                        <ion-icon name="eye-off-outline" id="iconconfirmarsenha" onclick="Mudar_IconConfirmarSenha()"></ion-icon>
-                    </span>
-                    <input type="password" name="confirmarsenha" id="confirmarsenha" required>
-                    <label for="confirmarsenha">Confirmar Senha</label>
+                <!--Esqueceu a Senha-->
+                <div class="remember-forgot">
+                    <a href="#">Esqueceu a Senha?</a>
                 </div>
-
-                <!--Cadastrar-->
-                <button type="submit" class="btn-form">CADASTRAR</button>
+                <!--Iniciar Sessão-->
+                <input type="submit" class="btn-form" value="INICIAR SESSÃO"></input>
                 <div class="cad-login">
-                    <p>Já possui uma conta? <a href="login.php">Entre aqui!</a></p>
+                    <p>Não tem uma conta? <a href="cadastro.php">Cadastre-se</a></p>
                 </div>
             </form>
         </div>
@@ -178,7 +144,6 @@
 
     <!--JAVASCRIPT-->
     <script src="../src/script/javascript.js" type="text/javascript"></script>
-    <script src="../src/script/validacao.js" type="text/javascript"></script>
         <!--Ícones-->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
