--- a/paginas/index.html
+++ b/paginas/index.html
@@ -9,12 +9,13 @@
     <link rel="shortcut icon" href="../src/favicon/android-chrome-512x512.png" type="image/x-icon">
 </head>
 <body>
+    <!-- MENU -->
     <header>
         <span>
             <a href="index.html"><img src="../src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
         </span>
 
-        <form action="../src/script/pesquisa.php" method="post">
+        <form action="pesquisa.php" method="post">
             <input type="search" name="pesquisa" id="pesquisa" class="menu-pesquisa" placeholder="Buscar">
         </form>
 
