🔨Aba Lateral (falta o js)

--- a/paginas/index.html
+++ b/paginas/index.html
@@ -9,12 +9,13 @@
     <link rel="shortcut icon" href="../src/favicon/android-chrome-512x512.png" type="image/x-icon">
 </head>
 <body>
+    <!-- MENU -->
     <header>
         <span>
             <a href="index.html"><img src="../src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
         </span>
 
-        <form action="../src/script/pesquisa.php" method="post">
+        <form action="pesquisa.php" method="post">
             <input type="search" name="pesquisa" id="pesquisa" class="menu-pesquisa" placeholder="Buscar">
         </form>
 
@@ -26,9 +27,10 @@
 
             <!--Menu PC-->
             <span id="menu-pc">
+                <a href="#" class="link-menupc">Pulseiras</a>
                 <a href="#" class="link-menupc">Anéis</a>
+                <a href="#" class="link-menupc">Colares</a>
                 <a href="#" class="link-menupc">Brincos</a>
-                <a href="#" class="link-menupc" style="margin-right: 10px;">Colares</a>
             </span>
 
             <!--Menu Mobile-->
@@ -414,12 +416,13 @@
     <!-- RODAPÉ -->
     <footer id="rodape">
         <!-- Categorias -->
-        <span>
+       <span>
             <h1>Categorias</h1>
             <ul>
-                <li><a href="#">Alianças</a></li>
-                <li><a href="#">Brincos</a></li>
-                <li class="ultimo"><a href="#">Colares</a></li>
+                <li><a href="#">Pulseiras</a></li>
+                <li><a href="#">Anéis</a></li>
+                <li><a href="#">Colares</a></li>
+                <li class="ultimo"><a href="#">Brincos</a></li>
             </ul>
         </span>
 
