--- a/paginas/faq.html
+++ b/paginas/faq.html
@@ -15,7 +15,7 @@
             <a href="index.html"><img src="../src/img/Bella Logo com Fundo.png" alt="Logo" class="logo"></a>
         </span>
 
-        <form action="../src/script/pesquisa.php" method="post">
+        <form action="pesquisa.php" method="post">
             <input type="search" name="pesquisa" id="pesquisa" class="menu-pesquisa" placeholder="Buscar">
         </form>
 
@@ -27,9 +27,10 @@
 
             <!--Menu PC-->
             <span id="menu-pc">
+                <a href="#" class="link-menupc">Pulseiras</a>
                 <a href="#" class="link-menupc">Anéis</a>
+                <a href="#" class="link-menupc">Colares</a>
                 <a href="#" class="link-menupc">Brincos</a>
-                <a href="#" class="link-menupc" style="margin-right: 10px;">Colares</a>
             </span>
 
             <!--Menu Mobile-->
@@ -102,20 +103,22 @@
         <input type="search" name="pesquisa" id="pesquisa" placeholder="Buscar">
     </span>
     <span class="menu-pc-mobile">
-        <a href="#">Alianças</a>
-        <a href="#">Brincos</a>
+        <a href="#">Pulseiras</a>
+        <a href="#">Anéis</a>
         <a href="#">Colares</a>
+        <a href="#">Brincos</a>
     </span>
 
     <!-- RODAPÉ -->
      <footer id="rodape">
         <!-- Categorias -->
-        <span>
+       <span>
             <h1>Categorias</h1>
             <ul>
-                <li><a href="#">Alianças</a></li>
-                <li><a href="#">Brincos</a></li>
-                <li class="ultimo"><a href="#">Colares</a></li>
+                <li><a href="#">Pulseiras</a></li>
+                <li><a href="#">Anéis</a></li>
+                <li><a href="#">Colares</a></li>
+                <li class="ultimo"><a href="#">Brincos</a></li>
             </ul>
         </span>
 
