✨Resultado de Pesquisas

--- a/paginas/teste.html
+++ b/paginas/teste.html
@@ -59,7 +59,7 @@
                 <button class="btnmenu-mobile">
                     <ion-icon name="cart-outline" class="iconcarrinho" color="light"></ion-icon>
                     <div class="listamenu">
-                        <a href="#" class="link-listamenu" id="mostrarcarrinho">Ver Carrinho</a>
+                        <a href="#" class="link-listamenu mostrarcarrinho">Ver Carrinho</a>
                         <a href="#" class="link-listamenu">Checkout</a>
                         <a href="#" class="link-listamenu">Histórico</a>
                     </div>
@@ -91,7 +91,7 @@
                 <button class="btnmenu-pc">
                     <ion-icon name="cart-outline" class="iconbtn"></ion-icon><br>Carrinho
                     <div class="listamenu btncarrinho">
-                        <a href="#" class="link-listamenu" id="mostrarcarrinho">Ver Carrinho</a>
+                        <a href="#" class="link-listamenu mostrarcarrinho">Ver Carrinho</a>
                         <a href="#" class="link-listamenu">Checkout</a>
                         <a href="#" class="link-listamenu">Histórico</a>
                     </div>
@@ -111,12 +111,12 @@
     </span>
 
     <!-- BARRA LATERAL - HISTÓRICO -->
-     <aside id="carrinho">
+    <aside id="carrinho" style="display: none;">
         <ion-icon name="cart-outline"></ion-icon>
         <h1>Seu carrinho está vazio!</h1> <br>
         <p>Escolha algum produto e adicione ao carrinho para realizar sua compra!</p> <br>
         <a id="fecharcarrinho">Voltar</a>
-     </aside>
+    </aside>
 
     <!-- Link âncora para voltar ao topo da página -->
     <a name="topo"></a>
