✅Aba Lateral (apenas funcionando em teste.html)

--- a/paginas/teste.html
+++ b/paginas/teste.html
@@ -418,6 +418,9 @@
         </span>
     </article>
 
+    <!-- Escuro -->
+    <div id="escuro" style="display: none;"></div>
+
     <!-- VOLTAR AO TOPO -->
     <div class="voltar-topo">
         <a href="#topo">Voltar ao Topo <ion-icon name="chevron-up-outline"></ion-icon></a>
