--- a/paginas/index.html
+++ b/paginas/index.html
@@ -109,6 +109,14 @@
         <a href="#">Brincos</a>
     </span>
 
+    <!-- BARRA LATERAL - HISTÓRICO -->
+    <aside id="carrinho" style="display: none;">
+        <ion-icon name="cart-outline"></ion-icon>
+        <h1>Seu carrinho está vazio!</h1> <br>
+        <p>Escolha algum produto e adicione ao carrinho para realizar sua compra!</p> <br>
+        <a id="fecharcarrinho">Voltar</a>
+    </aside>
+
     <!-- Link âncora para voltar ao topo da página -->
     <a name="topo"></a>
 
