--- a/paginas/faq.html
+++ b/paginas/faq.html
@@ -58,7 +58,7 @@
                 <button class="btnmenu-mobile">
                     <ion-icon name="cart-outline" class="iconcarrinho" color="light"></ion-icon>
                     <div class="listamenu">
-                        <a href="#" class="link-listamenu">Ver Carrinho</a>
+                        <a href="#" class="link-listamenu mostrarcarrinho">Ver Carrinho</a>
                         <a href="#" class="link-listamenu">Checkout</a>
                         <a href="#" class="link-listamenu">Histórico</a>
                     </div>
@@ -90,7 +90,7 @@
                 <button class="btnmenu-pc">
                     <ion-icon name="cart-outline" class="iconbtn"></ion-icon><br>Carrinho
                     <div class="listamenu btncarrinho">
-                        <a href="#" class="link-listamenu">Ver Carrinho</a>
+                        <a href="#" class="link-listamenu mostrarcarrinho">Ver Carrinho</a>
                         <a href="#" class="link-listamenu">Checkout</a>
                         <a href="#" class="link-listamenu">Histórico</a>
                     </div>
@@ -116,6 +116,12 @@
         <p>Escolha algum produto e adicione ao carrinho para realizar sua compra!</p> <br>
         <a id="fecharcarrinho">Voltar</a>
     </aside>
+
+    <!-- Conteudo Placeholder -->
+     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure ea ducimus consequatur saepe, voluptatum natus quam delectus iusto, laboriosam ex incidunt, nemo possimus qui placeat blanditiis animi nisi eos? Culpa! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit earum, animi maiores id hic autem sequi maxime error. Iure sunt ducimus voluptatum laudantium quas! Ipsa eveniet sint dolorum distinctio voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eius officia dolorem dolor quam sed corporis ducimus voluptatum ipsum? Fuga sunt eligendi molestiae incidunt ex dolorem distinctio accusantium ut nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque eligendi quod quisquam temporibus natus ullam porro eaque consequatur laboriosam enim, rem ipsam, deleniti recusandae inventore nam velit? Quia, nobis quam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet repellendus deserunt dolores aliquid! Placeat cumque esse adipisci, maxime expedita quaerat, minus enim amet repellat illum aspernatur rem repudiandae incidunt animi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure ea ducimus consequatur saepe, voluptatum natus quam delectus iusto, laboriosam ex incidunt, nemo possimus qui placeat blanditiis animi nisi eos? Culpa! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit earum, animi maiores id hic autem sequi maxime error. Iure sunt ducimus voluptatum laudantium quas! Ipsa eveniet sint dolorum distinctio voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eius officia dolorem dolor quam sed corporis ducimus voluptatum ipsum? Fuga sunt eligendi molestiae incidunt ex dolorem distinctio accusantium ut nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque eligendi quod quisquam temporibus natus ullam porro eaque consequatur laboriosam enim, rem ipsam, deleniti recusandae inventore nam velit? Quia, nobis quam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet repellendus deserunt dolores aliquid! Placeat cumque esse adipisci, maxime expedita quaerat, minus enim amet repellat illum aspernatur rem repudiandae incidunt animi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure ea ducimus consequatur saepe, voluptatum natus quam delectus iusto, laboriosam ex incidunt, nemo possimus qui placeat blanditiis animi nisi eos? Culpa! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit earum, animi maiores id hic autem sequi maxime error. Iure sunt ducimus voluptatum laudantium quas! Ipsa eveniet sint dolorum distinctio voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eius officia dolorem dolor quam sed corporis ducimus voluptatum ipsum? Fuga sunt eligendi molestiae incidunt ex dolorem distinctio accusantium ut nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque eligendi quod quisquam temporibus natus ullam porro eaque consequatur laboriosam enim, rem ipsam, deleniti recusandae inventore nam velit? Quia, nobis quam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet repellendus deserunt dolores aliquid! Placeat cumque esse adipisci, maxime expedita quaerat, minus enim amet repellat illum aspernatur rem repudiandae incidunt animi.</p>
+
+    <!-- Escuro -->
+    <div id="escuro" style="display: none;"></div>
 
     <!-- RODAPÉ -->
      <footer id="rodape">
