🛠️txt preço min max e btn filtrar

--- a/paginas/teste.html
+++ b/paginas/teste.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filtro de Preços</title>
+    <title>TESTE - Filtro de Preços</title>
     <style>
         .container {
             margin: 20px;
@@ -50,7 +50,7 @@
 
     <script>
         const priceRange = document.getElementById('price-range');
-        const minPriceDisplay = document.getElementById('min-price');
+        const minPriceDisplay = document.getElementById('mie');
         const maxPriceDisplay = document.getElementById('max-price');
         const productList = document.getElementById('product-list');
 
