--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <a href="./paginas/login.php">Login</a> <br>
     <a href="./paginas/minha-conta.html">Minha Conta</a> <br>
 
-    <a href="./paginas/teste.html">&#x1F575 Segredo</a>
+    <a href="./paginas/teste.php?min=&max=&preco-ordem=&material=&tamanho=&categoria=">&#x1F575 Segredo</a>
 </body>
 </html>
