--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="./paginas/index.html">Página Inicial (Em Manutenção)</a> <br>
     <a href="./paginas/cadastro.php">Cadastro</a> <br>
     <a href="./paginas/login.php">Login</a> <br>
-    <a href="./paginas/minha-conta.html">Minha Conta</a> <br>
+    <a href="./paginas/minha-conta.php">Minha Conta</a> <br>
 
     <a href="./paginas/teste.php?min=&max=&preco-ordem=&material=&tamanho=&categoria=">&#x1F575 Segredo</a>
 </body>
