--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 <body>
     <h1>&#x2692 Em manutenção</h1>
     <p>Mas você pode visualizar nossas outras páginas :)</p>
-    <a href="./paginas/index.html">Página Inicial (Em Manutenção)</a> <br>
+    <a href="./paginas/index.php">Página Inicial (Em Manutenção)</a> <br>
     <a href="./paginas/cadastro.php">Cadastro</a> <br>
     <a href="./paginas/login.php">Login</a> <br>
     <a href="./paginas/minha-conta.php">Minha Conta</a> <br>
