--- a/src/script/teste.html
+++ b/src/script/teste.html
@@ -1,5 +1,19 @@
+<?php
+  
+// Verifica se usuário está logado
+session_start();
+if (isset($_SESSION['nome_exibir'])) {
+    // Divida o nome completo em partes
+    $nomeCompleto = $_SESSION['nome_exibir'];
+    $partesNome = explode(' ', $nomeCompleto);
+    $primeiroNome = $partesNome[0];
+} else {
+    $primeiroNome = '';
+}
+?>
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
