--- a/index.html
+++ b/index.html
@@ -6,8 +6,47 @@
     <link rel="stylesheet" href="src/script/style.css">
     <link rel="shortcut icon" href="src/favicon/android-chrome-512x512.png" type="image/x-icon">
     <title>Bella Acessários</title>
+
+    <style>       
+        body {
+            background-image: url(src/img/bg-index.png), url(src/img/bg-index.png);
+            background-repeat: repeat-x;
+            background-size: auto;
+            background-position: 0 0, 100% 0;
+            animation: fundo 20s linear infinite;
+        }
+
+        @keyframes fundo {
+            100% {background-position: -1500% 0, 0 0;}
+        }
+
+        #conteudo {
+            position: relative;
+            top: 100;
+            z-index: 3;
+            font-size: 3em;
+        }
+
+        #conteudo h1 {color: var(--cor4);}
+
+        .pedrismo {
+            z-index: 2;
+            display: block;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: linear-gradient(90deg, rgba(2,0,36,0) 0%, rgba(0,0,0,0.7) 68%, rgba(0,0,0,0.7960434173669468) 88%);
+        }
+    </style>
 </head>
 <body>
-    
+    <div id="conteudo">
+        <h1>Bella Acessórios</h1>
+        <a href="paginas/index.php">Conheça a Loja</a>
+    </div>
+
+    <div class="pedrismo"></div>
 </body>
 </html>
