--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background-repeat: repeat-x;
             background-size: auto;
             background-position: 0 0, 100% 0;
-            animation: fundo 20s linear infinite;
+            animation: fundo 30s linear infinite;
         }
 
         @keyframes fundo {
@@ -21,13 +21,26 @@
         }
 
         #conteudo {
-            position: relative;
-            top: 100;
+            position: absolute;
+            top: 50%;
+            left: 10%;
+            transform: translate(0, -50%);
             z-index: 3;
+            padding: 20px;
+            border-radius: 20px;
             font-size: 3em;
+            background-color: rgba(255, 255, 255, 0.45);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
         }
 
-        #conteudo h1 {color: var(--cor4);}
+        #conteudo h1 {color: var(--cor2);}
+
+        #conteudo a {
+            color: var(--cor4);
+            transition-duration: 0.2s;
+            }
+
+        #conteudo a:hover {color: var(--cor3);}
 
         .pedrismo {
             z-index: 2;
@@ -37,7 +50,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: linear-gradient(90deg, rgba(2,0,36,0) 0%, rgba(0,0,0,0.7) 68%, rgba(0,0,0,0.7960434173669468) 88%);
+            background-image: linear-gradient(90deg, rgba(0,0,0,0.8) 15%, rgba(0,0,0,0.5354516806722689) 34%, rgba(255,255,255,0) 100%);
         }
     </style>
 </head>
