alinhamento do topo do boleto

--- a/paginas/boleto.html
+++ b/paginas/boleto.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Modelo do Boleto</title>
+    <link rel="stylesheet" href="../src/script/boleto.css">
+    <link rel="shortcut icon" href="../src/favicon/android-chrome-512x512.png" type="image/x-icon">
 </head>
 <body>
-    
+    <span id="topo">
+        <img src="../src/img/Bella Logo com Fundo.png" alt="Logo Bella Acessórios">
+        <div>
+            <p>Boleto para pagamento do pedido de <strong>"NOME USUÁRIO"</strong></p>
+            <p>Agência <strong>"NUMERO ALEATORIO x4"</strong> Conta <strong>"NUMERO ALEATORIO x8 - x1"</strong></p>
+        </div>
+    </span>
 </body>
 </html>
